# pyan

./: .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  DESIGN-NOTES.md  DEV-SETUP-UV.md  README.md  REMAINING-ITEMS.md  TODO_DEFERRED.md  flake8rc  makedist.sh  modvis.py  pyproject.toml  test-python-versions.sh  visualize_pyan_architecture.sh
.github/workflows/: ci.yml  coverage.yml  tests.yml
briefs/: modernization-recon-brief.md  modernization-recon-report.md  namespace-objects-brief.md
pyan/: __init__.py  analyzer.py  anutils.py  callgraph.py  main.py  modvis.py  node.py  postprocessor.py  recognizers.py  sphinx.py  visgraph.py  writers.py
scripts/: test-python-versions.sh  uv-dev.sh
test/: test_installation.py
tests/: .coverage  test_analyzer.py  test_anutils.py  test_assignments.py  test_async_context.py  test_classes.py  test_coverage.py  test_exclude.py  test_features.py  test_from_sources.py  test_functions.py  test_imports.py  test_iteration.py  test_match.py  test_misc.py  test_modvis.py  test_namespace_objects.py  test_query_api.py  test_regressions.py  test_sphinx.py  test_type_params.py  test_writers.py
tests/old_tests/issue2/: pyan_err.txt
tests/old_tests/issue5/: .gitlab-ci.yml  Pyan-error.txt  relimport.py
tests/orbital/: bodies.py  mission.py  orbits.py
tests/test_code/: enum_example.py  features.py  submodule1.py  submodule3.py
tests/test_code/depth_pkg/: mod_a.py  mod_b.py
tests/test_code/dunder_all/: consumer.py
tests/test_code/dunder_all/pkg_private/: __init__.py  exports.py
tests/test_code/dunder_all/pkg_with_all/: __init__.py  exports.py
tests/test_code/imports/: attr_consumer.py  consumer.py  provider.py  reexporter.py
tests/test_code/init_imports/mypkg/: __init__.py  helpers.py
tests/test_code/init_imports/mypkg/sub/: __init__.py  alpha.py  beta.py
tests/test_code/issue117/dir1/: file1.py
tests/test_code/issue117/dir2/: file2.py  file3.py
tests/test_code/issue125/: fastapi_style.py
tests/test_code/issue126/: test_sample.py
tests/test_code/issue126/common/: __init__.py  file1.py  file2.py  file3.py
tests/test_code/issue127/: calls_func.py  chained_consumer.py  consumer.py  defines_func.py  namespace_module.py  within_scope.py
tests/test_code/issue134/: mod_a.py
tests/test_code/issue88/: defines_myfunc.py  func_import.py  has_import.py  module_import.py  no_import.py
tests/test_code/issue_wildcard/: test_module.py
tests/test_code/subpackage1/: __init__.py  enum.py  submodule1.py
tests/test_code_312/: generics.py  type_aliases.py
tests/test_code_modvis/: README.md
tests/test_code_modvis/pkg_a/: __init__.py  alpha.py
tests/test_code_modvis/pkg_b/: __init__.py  beta.py  delta.py  gamma.py
tests/test_code_no_package/: standalone.py
